--- a/examples/md-flexible/input/AllOptions.yaml
+++ b/examples/md-flexible/input/AllOptions.yaml
@@ -17,6 +17,7 @@ box-max                          :  [7.25, 7.25, 7.25]
 cell-size                        :  [1]
 deltaT                           :  0.001
 iterations                       :  10
+tuning-phases                    :  5
 periodic-boundaries              :  false
 Objects:                         
   CubeGrid:
@@ -68,4 +69,5 @@ thermostat:
   thermostatInterval             :  10
   addBrownianMotion              :  false
 vtk-filename                     :  AllOptionsSim
+vtk-write-frequency              :  1
 #checkpoint: AllOptionsSim_10.vtk
