--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,6 @@ include(clang-tidy)
 include(cmake-format)
 include(format)
 include(CodeCoverageAutopas)
-include(doxygen)
 include(OpenMP)
 
 include(version.cmake)
@@ -92,6 +91,8 @@ include(logging)
 include(other-compileroptions)
 include(vectorization)
 include(cuda)
+include(doxygen) # does not really need a target but the variable AUTOPAS_BUILD_EXAMPLES
+
 # write version information
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
