Refactored GaussianClusterGraph plot and fixed BayesianClusterSearch

--- a/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
@@ -1,5 +1,6 @@
 selector-strategy                :  Fastest-Absolute-Value
 tuning-strategy                  :  full-Search
+tuning-acquisition-function      :  expected-improvement
 tuning-interval                  :  1000
 tuning-samples                   :  3
 tuning-max-evidence              :  50
