updated traversal names in AllOptions.yaml

--- a/examples/md-flexible/input/AllOptions.yaml
+++ b/examples/md-flexible/input/AllOptions.yaml
@@ -4,7 +4,7 @@ verlet-skin-radius               :  0.2
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
 data-layout                      :  [AoS, SoA]
-traversal                        :  [lc_c08, lc_sliced, lc_c18, lc_c01, ds_sequential, vlc_sliced, verlet-c18, verlet-lc_c01, cuda-lc_c01, vl_list_iteration, lc_c01-combined-SoA, verlet-clusters, lc_c04, vvl_as_built, verlet-clusters-coloring, lc_c04_combined_SoA, verlet-cluster-cells]
+traversal                        :  [ds_sequential, lc_sliced, lc_sliced_balanced, lc_c01, lc_c01_combined_SoA, lc_c01_cuda, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcc_cluster_iteration_cuda, vcl_cluster_iteration, vcl_c06, vcl_c01_balanced, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vvl_as_built]
 tuning-strategy                  :  full-Search
 tuning-interval                  :  100
 tuning-samples                   :  3
