BayesianClusterSearch: Scale iteration down before using in continuous tuple NumberInterval.uniformSample: Choose mean if only 1 sample requested extractClusterGraph: reorded src,target of edges such that src is lower

--- a/examples/md-flexible/input/testTuning/MDFlex_Case1.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case1.yaml
@@ -8,7 +8,7 @@ tuning-max-evidence              :  10
 functor                          :  Lennard-Jones (12-6)
 cutoff                           :  2
 deltaT                           :  0
-# 138 tuning iterations + 50 to observe choses configuration
+# 138 tuning iterations + 50 to observe chosen configuration
 iterations                       :  188
 Objects:                         
   CubeGrid:
