--- a/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
@@ -1,11 +1,12 @@
 selector-strategy                :  Fastest-Absolute-Value
 tuning-strategy                  :  full-Search
-tuning-acquisition-function      :  expected-improvement
-tuning-interval                  :  1000
+tuning-acquisition-function      :  upper-confidence-bound
+tuning-interval                  :  100
 tuning-samples                   :  3
-tuning-max-evidence              :  50
+tuning-max-evidence              :  40
 functor                          :  Lennard-Jones (12-6)
 cutoff                           :  2
+verlet-skin-radius               :  0.2
 deltaT                           :  0
 cell-size                        :  [1.0,1.5,2.0]
 # 792 tuning iterations + 50 to observe chosen configuration
@@ -14,7 +15,7 @@ Objects:
   CubeGrid:
     0:  
       particles-per-dimension    :  [10, 10, 10]
-      particle-spacing           :  0.4
+      particle-spacing           :  0.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
       particle-type              :  0
