--- a/examples/md-flexible/input/testTimePerTraversal/cannonBallStartToLargeDomainSize/Case64.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/cannonBallStartToLargeDomainSize/Case64.yaml
@@ -11,8 +11,8 @@ periodic-boundaries              :  false
 Objects:
   CubeUniform:
     0:
-      numberOfParticles          :  400
-      box-length                 :  [10, 10, 10]
+      numberOfParticles          :  1000000
+      box-length                 :  [151, 151, 151]
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
       particle-type              :  2
