--- a/examples/md-flexible/input/testTimePerTraversal/cannonBallStartToLargeDomainSize/Case67.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/cannonBallStartToLargeDomainSize/Case67.yaml
@@ -11,8 +11,8 @@ periodic-boundaries              :  false
 Objects:
   CubeUniform:
     0:
-      numberOfParticles          :  1372
-      box-length                 :  [14, 14, 14]
+      numberOfParticles          :  1000000
+      box-length                 :  [211, 211, 211]
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
       particle-type              :  2
