--- a/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousRectanglesDensityDifferentDomainsizesLargeSecondAttempt/Case92.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousRectanglesDensityDifferentDomainsizesLargeSecondAttempt/Case92.yaml
@@ -11,15 +11,13 @@ deltaT                           :  0
 iterations                       :  50
 periodic-boundaries              :  false
 Objects:
-  CubeGauss:
+  CubeGrid:
     0:
-      distribution-mean          :  [2, 2, 2]
-      distribution-stddeviation  :  [130, 130, 130]
-      numberOfParticles          :  1000000
-      box-length                 :  [200, 200, 200]
+      particles-per-dimension    :  [100, 100, 100]
+      particle-spacing           :  2.0
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particle-type              :  1
+      particle-type              :  0
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  1
