Change files in non homogeneous scenario

--- a/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousRectanglesDensityDifferentDomainsizesLargeSecondAttempt/Case90.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousRectanglesDensityDifferentDomainsizesLargeSecondAttempt/Case90.yaml
@@ -14,7 +14,7 @@ Objects:
   CubeGauss:
     0:
       distribution-mean          :  [2, 2, 2]
-      distribution-stddeviation  :  [50, 50, 50]
+      distribution-stddeviation  :  [25, 25, 25]
       numberOfParticles          :  1000000
       box-length                 :  [200, 200, 200]
       bottomLeftCorner           :  [0, 0, 0]
@@ -25,3 +25,5 @@ Objects:
       particle-mass              :  1
 no-flops                         :  true
 no-end-config                    :  true
+vtk-filename                     :  Case90CubeGauss
+vtk-write-frequency              :  1
