--- a/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousRectanglesDensityDifferentDomainsizesLargeSecondAttempt/Case92.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousRectanglesDensityDifferentDomainsizesLargeSecondAttempt/Case92.yaml
@@ -23,3 +23,5 @@ Objects:
       particle-mass              :  1
 no-flops                         :  true
 no-end-config                    :  true
+vtk-filename                     :  Case92NoGauss
+vtk-write-frequency              :  1
