delete unused scenario and change third gauss attempt

--- a/examples/md-flexible/input/testTimePerTraversal/cannonBalltestCubeUniformDensityDifferentDomainsizesLarge/Case62.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/cannonBalltestCubeUniformDensityDifferentDomainsizesLarge/Case62.yaml
@@ -21,3 +21,5 @@ Objects:
       particle-mass              :  1
 no-flops                         :  true
 no-end-config                    :  true
+vtk-filename                     :  Case62cannonBallLarge
+vtk-write-frequency              :  1
