--- a/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousThirdGaussAttemptSmallDomain/Case92.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousThirdGaussAttemptSmallDomain/Case92.yaml
@@ -11,10 +11,12 @@ deltaT                           :  0
 iterations                       :  50
 periodic-boundaries              :  false
 Objects:
-  CubeGrid:
+  CubeGauss:
     0:
-      particles-per-dimension    :  [20, 20, 25]
-      particle-spacing           :  3.0
+      distribution-mean          :  [2, 2, 2]
+      distribution-stddeviation  :  [30, 30, 30]
+      numberOfParticles          :  10000
+      box-length                 :  [50, 50, 50]
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
       particle-type              :  2
