--- a/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousThirdGaussAttemptSmallDomain/Case85.yaml
+++ b/examples/md-flexible/input/testTimePerTraversal/nonHomogeneousThirdGaussAttemptSmallDomain/Case85.yaml
@@ -25,3 +25,5 @@ Objects:
       particle-mass              :  1
 no-flops                         :  true
 no-end-config                    :  true
+vtk-filename                     :  Case85CubeGauss
+vtk-write-frequency              :  1
