--- a/examples/md-flexible/input/fallingDrop.yaml
+++ b/examples/md-flexible/input/fallingDrop.yaml
@@ -19,7 +19,8 @@ deltaT                           :  0.0005
 iterations                       :  90000
 periodic-boundaries              :  true
 globalForce                      :  [0,0,-12]
-Objects:                         
+Objects:
+  # since md-flex currently has no reflecting boundaries we use walls of particles with infinite (or max double) mass.
   # bottom wall
   CubeGrid:
     0:  
