--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -36,7 +36,7 @@ jobs:
           # Working directory
           working-directory: "./build-doxygen/" # default is .
           # enable fail-on-warnings
-          fail-on-warnings: "TRUE"
+          fail-on-warnings: true
           # filter warnings from Readme file
           warnings-filter: "README.md"
 
