--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -40,10 +40,10 @@ jobs:
           # filter warnings from Readme file
           warnings-filter: "README.md"
 
-#      - name: Deploy
-#        uses: peaceiris/actions-gh-pages@v3
-#        with:
-#          github_token: ${{ secrets.GITHUB_TOKEN }}
-#          # Default Doxyfile build documentation to html directory.
-#          # Change the directory if changes in Doxyfile
-#          publish_dir: ./html
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Default Doxyfile build documentation to html directory.
+          # Change the directory if changes in Doxyfile
+          publish_dir: ./doxygen_documentation/git-master/
