--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -41,9 +41,10 @@ jobs:
           warnings-filter: "README.md"
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3.7.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # Default Doxyfile build documentation to html directory.
-          # Change the directory if changes in Doxyfile
-          publish_dir: ./doxygen_documentation/git-master/
+          publish_dir: ./build-doxygen/html/
+          destination_dir: doxygen_documentation/git-master/
+          publish_branch: main
+          external_repository: AutoPas/AutoPas.github.io
