--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -45,7 +45,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./build-doxygen/html/
+          publish_dir: ./build-doxygen/doc_doxygen/html/
           destination_dir: doxygen_documentation/git-master/
           publish_branch: main
           external_repository: AutoPas/AutoPas.github.io
+          user_name: github-actions[bot]
+          user_email: github-actions[bot]@users.noreply.github.com
