--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,5 +1,5 @@
 PROJECT_NAME           = "@CMAKE_PROJECT_NAME@"
-PROJECT_NUMBER         = @AUTOPAS_VERSION_MAJOR@.@AUTOPAS_VERSION_MINOR@.@AUTOPAS_VERSION_PATCH@
+PROJECT_NUMBER         = @AutoPas_VERSION@
 STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@/src
 OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
 INPUT                  = @PROJECT_SOURCE_DIR@/@DOXY_MAIN_PAGE@ \
