--- a/examples/md-flexible/Doxyfile.in
+++ b/examples/md-flexible/Doxyfile.in
@@ -1,5 +1,5 @@
 PROJECT_NAME           = "md-flexible"
-PROJECT_NUMBER         = @AUTOPAS_VERSION_MAJOR@.@AUTOPAS_VERSION_MINOR@.@AUTOPAS_VERSION_PATCH@
+PROJECT_NUMBER         = @AutoPas_VERSION@
 STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@/examles
 OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen_md-flexible/
 INPUT                  = @PROJECT_SOURCE_DIR@/examples/md-flexible/README.md \
