--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Deploy AutoPas doxygen documentation (only on master)
         uses: peaceiris/actions-gh-pages@v3.7.2
-        #if: ${{ github.ref == 'ref/head/master' }}
+        if: ${{ github.ref == 'ref/head/master' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
