--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,4 +1,5 @@
 PROJECT_NAME           = "@CMAKE_PROJECT_NAME@"
+PROJECT_LOGO           = @PROJECT_SOURCE_DIR@/docs/graphics/AutoPasLogo_Large.png
 PROJECT_NUMBER         = @AutoPas_VERSION@
 STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@/src
 OUTPUT_DIRECTORY       = @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
