--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -50,3 +50,5 @@ INCLUDE_PATH           = @PROJECT_SOURCE_DIR@/src
 IMAGE_PATH             = @PROJECT_SOURCE_DIR@/docs/graphics
 TEMPLATE_RELATIONS     = YES
 HAVE_DOT               = YES
+GENERATE_XML           = YES
+
