adds GENERATE_XML=YES to fix missing warnings

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -51,3 +51,4 @@ INCLUDE_PATH           = @PROJECT_SOURCE_DIR@/src
 IMAGE_PATH             = @PROJECT_SOURCE_DIR@/docs/graphics
 TEMPLATE_RELATIONS     = YES
 HAVE_DOT               = YES
+GENERATE_XML           = YES
