--- a/examples/md-flexible/Doxyfile.in
+++ b/examples/md-flexible/Doxyfile.in
@@ -41,3 +41,4 @@ MACRO_EXPANSION        = YES
 IMAGE_PATH             = @PROJECT_SOURCE_DIR@/docs/graphics
 TEMPLATE_RELATIONS     = YES
 HAVE_DOT               = YES
+GENERATE_XML           = YES
