--- a/examples/md-flexible/input/fallingDrop.yaml
+++ b/examples/md-flexible/input/fallingDrop.yaml
@@ -4,7 +4,8 @@ verlet-skin-radius               :  0.3
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
 # data-layout                      :  [AoS, SoA]
-# traversal                        :  [ds_sequential, lc_sliced, lc_sliced_balanced, lc_c01, lc_c01_combined_SoA, lc_c01_cuda, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcc_cluster_iteration_cuda, vcl_cluster_iteration, vcl_c06, vcl_c01_balanced, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vvl_as_built]
+# Traversals for Release paper:
+# traversal                        :  [ lc_c01, lc_c01_combined_soa, lc_c18, lc_c08, lc_c04_combined_SoA, lc_c04, lc_c04_HCP, lc_sliced, vl_list_iteration, vvl_as_built, vlc_c01, vlc_c18, vlc_sliced, vcl_cluster_iteration, vcl_c01_balanced, vcl_c06 ]
 tuning-strategy                  :  full-Search
 tuning-interval                  :  1000
 tuning-samples                   :  3
@@ -24,7 +25,7 @@ Objects:
   # bottom wall
   CubeGrid:
     0:  
-      particles-per-dimension    :  [50, 30, 1]
+      particles-per-dimension    :  [51, 31, 1]
       particle-spacing           :  1
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
@@ -33,60 +34,16 @@ Objects:
       particle-sigma             :  1
       particle-mass              :  1.79769e+308
   # top wall
-  CubeGrid:
-    1:  
-      particles-per-dimension    :  [50, 30, 1]
-      particle-spacing           :  1
-      bottomLeftCorner           :  [1, 0, 40]
-      velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1.79769e+308
-  # right wall
-  CubeGrid:
-    2:  
-      particles-per-dimension    :  [1, 30, 40]
-      particle-spacing           :  1
-      bottomLeftCorner           :  [0, 0, 1]
-      velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1.79769e+308
-  # left wall
-  CubeGrid:
-    3:  
-      particles-per-dimension    :  [1, 30, 40]
-      particle-spacing           :  1
-      bottomLeftCorner           :  [50, 0, 0]
-      velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1.79769e+308
-  # front wall
-  CubeGrid:
-    2:  
-      particles-per-dimension    :  [49, 1, 39]
-      particle-spacing           :  1
-      bottomLeftCorner           :  [1, 0, 1]
-      velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1.79769e+308
-  # back wall
-  CubeGrid:
-    3:  
-      particles-per-dimension    :  [51, 1, 41]
-      particle-spacing           :  1
-      bottomLeftCorner           :  [0, 30, 0]
-      velocity                   :  [0, 0, 0]
-      particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  1.79769e+308
+#  CubeGrid:
+#    1:
+#      particles-per-dimension    :  [51, 31, 1]
+#      particle-spacing           :  1
+#      bottomLeftCorner           :  [1, 0, 40]
+#      velocity                   :  [0, 0, 0]
+#      particle-type              :  0
+#      particle-epsilon           :  1
+#      particle-sigma             :  1
+#      particle-mass              :  1.79769e+308
   # "water"
   CubeClosestPacked:
     0:  
@@ -118,4 +75,4 @@ vtk-filename                     :  fallingDrop
 vtk-write-frequency              :  50
 no-flops                         :  false
 no-end-config                    :  true
-log-level                        : debug
+log-level                        :  debug
