--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,9 +28,9 @@ jobs:
           - CC: clang
             CXX: clang++
             image: autopas/autopas-build-clang
-          - CC: icc
-            CXX: icpc
-            image: autopas/autopas-build-intel
+        #  - CC: icc
+        #    CXX: icpc
+        #    image: autopas/autopas-build-intel
         generator: [ "Unix Makefiles", "Ninja" ]
         openmp: [ "On", "Off" ]
         target: [ "Release","Debug" ]
