--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,9 +31,9 @@ jobs:
         #  - CC: icc
         #    CXX: icpc
         #    image: autopas/autopas-build-intel
-        generator: [ "Unix Makefiles", "Ninja" ]
+        generator: [ "Unix Makefiles" ]
         openmp: [ "On", "Off" ]
-        target: [ "Release","Debug" ]
+        target: [ "Release", "Debug" ]
         asan: [ "On", "Off" ]
         include:
           - config:
