uncomment index step, as it appears to be necessary.

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -26,7 +26,7 @@ extraction:
         - cd _lgtm_build_dir
         # uses AUTOPAS_USE_TEST_GLOB to speed up compilation.
         - CC=clang CXX=clang++ cmake -DAUTOPAS_BUILD_TESTS=OFF -DAUTOPAS_USE_TEST_GLOB=OFF -DCMAKE_VERBOSE_MAKEFILE=ON -DBUILD_DOCS=OFF -DCATKIN_ENABLE_TESTING=OFF -DBUILD_DOCUMENTATION=OFF -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=-fpermissive ..
-#    index:
-#      build_command:
-#        - cd _lgtm_build_dir
-#        - make -j 2
+    index:
+      build_command:
+        - cd _lgtm_build_dir
+        - make -j 2
