Disables md tests if AUTOPAS_BUILD_TESTS is off.
Fixes compilation error if AUTOPAS_BUILD_TESTS=OFF

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ option(
 
 # do nothing if nothing should be done
 if (NOT AUTOPAS_BUILD_TESTS)
+    message(STATUS "AUTOPAS_BUILD_TESTS is disabled. Not building tests.")
     return()
 endif ()
 
