fixes most errors, only gtest/gmock itself remains...

--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -37,6 +37,7 @@ target_compile_definitions(
     $<$<BOOL:${AUTOPAS_ENABLE_CUDA}>:AUTOPAS_CUDA>
     $<$<NOT:$<BOOL:${AUTOPAS_OPENMP}>>:EIGEN_DONT_PARALLELIZE>
     $<$<BOOL:${AUTOPAS_MPI}>:AUTOPAS_MPI>
+    _USE_MATH_DEFINES
 )
 
 if (AUTOPAS_ENABLE_CUDA)
