--- a/tests/testAutopas/CMakeLists.txt
+++ b/tests/testAutopas/CMakeLists.txt
@@ -23,7 +23,7 @@ target_link_libraries(
     autopasTools
     gmock # gmock includes the gtest target, so we don't need it here.
     Eigen3 # Eigen3 is needed for the tests, but normally not required when using AutoPas.
-    harmony # ActiveHarmony is needed for the tests, but normally not required when using AutoPas.
+    $<$<NOT:$<BOOL:${MSVC}>>:harmony> # ActiveHarmony is needed for the tests, but normally not required when using AutoPas.
 )
 
 include(GoogleTest)
